bazarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr-service    # < name of the service
  namespace: bazarr # < namespace where place the deployment and pods
spec:
  selector:
    app: bazarr # < reference to the deployment (connects with this deployment)
  ports:
    - name: webinterface
      protocol: TCP
      port: 6767
